example/gatekeeper-patch.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: gatekeeper-validating-webhook-configuration
  annotations:
    # Placeholder, patch with the gatekeeper namespace value
    certmanager.k8s.io/inject-ca-from: example-namespace/gatekeeper-serving-cert
webhooks:
  - name: validation.gatekeeper.sh
    clientConfig:
      service:
        # Placeholder, patch with the gatekeeper namespace value
        namespace: example-namespace
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - "namespaces"
          - "ingresses"
  - name: check-ignore-label.gatekeeper.sh
    clientConfig:
      service:
        # Placeholder, patch with the gatekeeper namespace value
        namespace: example-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-controller-manager
spec:
  template:
    spec:
      containers:
        - name: manager
          args:
            - --port=8443
            - --logtostderr
            - --disable-cert-rotation
            # Placeholder, patch with the gatekeeper namespace value and any
            # other namespaces you want to exclude from the webhook
            - --exempt-namespace=example-namespace
            - --operation=webhook
